feat: add observability metrics and monitoring stack